--- a/watermarker.html
+++ b/watermarker.html
@@ -51,7 +51,7 @@
 <body class="min-h-screen gradient-bg p-4 font-['Fira_Sans']">
   <div class="max-w-5xl mx-auto">
     <div class="text-gray-800 text-center py-2 mb-3">
-      <h1 class="text-4xl font-extrabold">Social Media Image Creator</h1>
+      <h1 class="text-4xl font-extrabold">Watermarker LM</h1>
     </div>
 
     <div class="rounded-3xl overflow-hidden">
@@ -591,7 +591,7 @@
 
       try {
         const link = document.createElement('a');
-        link.download = 'social-media-image.webp';
+        link.download = 'Watermarked.webp';
         link.href = canvas.toDataURL('image/webp', 1.0);  // Changed quality to 1.0 for best quality
 
         link.click();
