--- a/image_creator15.html
+++ b/image_creator15.html
@@ -185,7 +185,7 @@
                 <label for="fontStyleSelect" class="block font-bold text-gray-600 mb-1 text-xs">Font Style:</label>
                 <select id="fontStyleSelect" class="w-full px-3 py-2 border-2 border-gray-300 rounded-xl focus:border-blue-500 focus:ring-4 focus:ring-blue-100 transition-all duration-300 text-sm">
                     <option value="Fira Sans" selected>Fira Sans (Default)</option>
-                    <option value="Parkinsans">Parkinsans</option>
+                    <option value="Parkinsans">Parkinsans (Magazine)</option>
                 </select>
             </div>
             <div>
